--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,11 @@
 == README
 
+this application is a page for portfolio.
+
+
+
+===
+
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
@@ -25,4 +31,6 @@ Things you may want to cover:
 
 
 Please feel free to use a different markup language if you do not plan to run
+
+
 <tt>rake doc:app</tt>.
